--- a/money/money/style.css
+++ b/money/money/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 .page-container{
-    /*background:url(../images/picbg.png) no-repeat center 500px;*/
+    background:url(upsc.png) no-repeat center 500px;
     line-height:1;}
 .fz-14{font-size:14px;}
 .fz-15{font-size:15px;}
@@ -17,7 +17,8 @@ input[type="text"]{font-family:"Microsoft YaHei"; background-color:transparent; 
 /* public */
 .banner-bg{/*background:url(../images/banner-bg.jpg) repeat-x 0 0;*/  width:100%;}
 .banner-img{
-    background:url(https://images.unsplash.com/photo-1517097473408-c0d7983cb95c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=56f37b459e7a282e7ca3bcde27effd26&auto=format&fit=crop&w=1500&q=80) no-repeat center;
+    background:url(https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940) no-repeat center;
+    /*background-size: 100% 100%;*/
     width:100%;
 }
 .banner-img3{
@@ -36,7 +37,7 @@ input[type="text"]{font-family:"Microsoft YaHei"; background-color:transparent; 
 .banner-con2{
     /*background:url(../images/banner-2.jpg) no-repeat center top;*/
     height:460px; width:1000px; position:relative; margin:0 auto}
-.form-box{position:absolute; background:#fff; right:0; top:80px; border-radius:3px; width:392px; height:369px;
+.form-box{position:absolute; right:0; top:80px; border-radius:3px; width:392px; height:270px;
     /*background: url(../images/form-bg.png) no-repeat;*/
     background-size:392px 369px;}
 .form-box .form-title{line-height: 80px;font-size: 34px;color: white;background-color: #80472e;border-bottom: 1px solid #6b2f15;text-align: center;}
