--- a/money/money/common.css
+++ b/money/money/common.css
@@ -414,7 +414,7 @@ textarea
     width: 300px;
     line-height: 28px;
     display: flex;
-    font-size: 16px;
+    font-size: 18px;
     /*color: #FFFFFF;*/
     position: relative;
     bottom: 56px;
@@ -443,7 +443,7 @@ textarea
 
 .xiah{
     width: 156px;
-    height: 162px;
+    height: 26px;
     background: #FFFFFF;
     position: absolute;
     left: 68px;
@@ -458,7 +458,7 @@ textarea
 }
 .xiah p{
     line-height: 25px;
-    border-bottom: 1px solid #ededed;
+    /*border-bottom: 1px solid #ededed;*/
     font-size: 14px;
     color: #777777;
 }
@@ -466,7 +466,7 @@ textarea
     flex: 1;
     text-align: center;
     border-right: 1px solid #ededed;
-    height: 162px;
+    /*height: 162px;*/
     cursor: pointer;
 
 }
