--- a/money/money/style.css
+++ b/money/money/style.css
@@ -17,7 +17,7 @@ input[type="text"]{font-family:"Microsoft YaHei"; background-color:transparent; 
 /* public */
 .banner-bg{/*background:url(../images/banner-bg.jpg) repeat-x 0 0;*/  width:100%;}
 .banner-img{
-    background:url(banner8.jpg) no-repeat center;
+    background:url(500565132.jpg) no-repeat center;
     background-size: cover;
     width:100%;
     /*background-position: 0 18%;*/
