--- a/money/money/style.css
+++ b/money/money/style.css
@@ -123,7 +123,9 @@ input[type="text"]{font-family:"Microsoft YaHei"; background-color:transparent; 
 .select-list li{padding-left:40px; cursor:pointer; line-height:38px;}
 .select-list li:hover{background:#eee;}
 .select-yean .selectText{padding-left:40px;}
-
+/*1+2+4+8+16+32+64+128+256+512+1024+2048+4096+8192+16384+32768+65536+131072+262144+524288+1048576+2097152+4194304
++8388608+16777216+33554432+67108864+134217728+268435456+536870912=1073741823*/
+/*24650    43559.5*/
 .select-month .select-list{width:88px}
 .select-month .select-list li{padding-left:10px;}
 .select-month .selectText{padding-left:10px;}
